--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc -p . && ncp src/schema build/schema",
     "dev": "nodemon \"src/app.ts\" --exec \"ts-node\"  \"src/app.ts\" -e ts,graphql,json"
-
   },
   "repository": {
     "type": "git",
@@ -29,11 +28,13 @@
   },
   "homepage": "https://github.com/AnibalVillalva/angular-graphql#readme",
   "dependencies": {
+    "@graphql-tools/load-files": "^6.6.0",
     "apollo-server-express": "^3.9.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "graphql-depth-limit": "^1.1.0",
     "graphql-import-node": "^0.0.5",
     "ncp": "^2.0.0"
   },
@@ -42,6 +43,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
+    "@types/graphql-depth-limit": "^1.1.3",
     "@types/node": "^18.0.0",
     "nodemon": "^2.0.18",
     "ts-node": "^10.8.1"
