--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "graphql": "^16.5.0",
     "graphql-depth-limit": "^1.1.0",
     "graphql-import-node": "^0.0.5",
-    "ncp": "^2.0.0"
+    "ncp": "^2.0.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
